fixed layout spacing

--- a/app/webroot/css/bootstrap.app.css
+++ b/app/webroot/css/bootstrap.app.css
@@ -110,7 +110,7 @@ span.status {
 /* Response Widget
 -------------------------------------------------- */
 h3.control-widget {
-  display: inline !important;
+  display: inline-block !important;
 }
 .rw-container {
   /*border: 3px dashed green;*/
